finally fixed bug with extra whitespace + comments

--- a/client/website/src/css/ResourcesLanding/ResourcesLandingPageHeader.css
+++ b/client/website/src/css/ResourcesLanding/ResourcesLandingPageHeader.css
@@ -6,14 +6,22 @@
 }
 
 .resources-landing-page-header-info-div {
-  margin-left: 7%;
+  position: absolute;
+  left: 15%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+
+  top: 40%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+
   background: #6652a0d9;
+
   width: min(fit-content, 66%);
   height: fit-content;
+
   padding: 2.67vw 2.34vw 1.67vw 2.34vw;
   color: var(--white);
-  position: absolute;
-  margin-top: 5%;
 }
 
 .resources-landing-page-header-text {
@@ -25,7 +33,6 @@
 }
 
 .resources-landing-page-header-info {
-  margin-top: 1.09vw;
   font-family: var(--text-font);
   font-style: normal;
   font-weight: normal;
@@ -47,23 +54,29 @@
   }
 }
 
+/* Bug fix for this screen range that causes some whitespace to appear on bottom */
+/* @media screen and (min-width: 700px) and (max-width: 750px) {
+    .resources-landing-page-header-div{
+        height: 100% !important;
+    }
+} */
+
 @media screen and (max-width: 600px) {
   .resources-landing-page-header-info-div {
     width: min(fit-content, 56%);
-    margin-left: 7.19vw;
-    top: 25.78vw;
+    left: 10%;
+
+    top: 30%;
+
     padding: 4vw;
   }
 
   .resources-landing-page-header-text {
-    font-size: 5.63vw;
+    font-size: 6.63vw;
     line-height: 170%;
-    /* margin-left: 6.25vw;
-      margin-top: 7.19vw; */
   }
 
   .resources-landing-page-header-info {
-    /* margin: 4.8vh 6.25vw 4.8vh 6.25vw; */
     bottom: 23.62%;
   }
 }
